# DLA-Future

./: .clang-format  .cmake-format.py  .codecov.yml  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .inshpect.toml  BUILD.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  DLAFConfig.cmake.in  DOCUMENTATION.md  DartConfiguration.tcl  INSTALL.md  LICENSE  README.md  RELEASE_PROCEDURE.md  bors.toml  inshpect.output  plot_output.py  spack-build-01-cmake-out.txt  spack-build-02-build-out.txt  spack-build-03-install-out.txt  spack-build-env-mods.txt  spack-build-env.txt  spack-build-out.txt  spack-configure-args.txt  spack.yaml  test_larft.ipynb  trid-cp2k.h5  verify_larft.ipynb
.github/: check_license.sh  (+2 more)
dlaf/: CMakeLists.txt
dlaf/include/dlaf/: mpi_header.h
dlaf/src/common/: index2d.cpp
dlaf/src/communication/: communicator.cpp  communicator_grid.cpp  communicator_impl.cpp  communicator_impl.h  communicator_releasable.hpp
dlaf/src/communicator/: communicator.cpp  communicator_grid.cpp  communicator_releasable.hpp
doc/: CMakeLists.txt  Doxyfile.in  Makefile  mainpage.dox
miniapp/: CMakeLists.txt  check_cholesky.tpp  cublas.cpp  miniapp_band_to_tridiag.cpp  miniapp_bt_band_to_tridiag.cpp  miniapp_bt_reduction_to_band.cpp  miniapp_chol_and_gen2std.cpp  miniapp_cholesky.cpp  miniapp_communication.cpp  miniapp_cublas.cpp  miniapp_eigensolver.cpp  miniapp_gemmchol.cpp  miniapp_gen_eigensolver.cpp  miniapp_gen_to_std.cpp  miniapp_inverse_from_cholesky_factor.cpp  miniapp_redistribution.cpp  miniapp_reduction_to_band.cpp  miniapp_triangular_inverse.cpp  miniapp_triangular_multiplication.cpp  miniapp_triangular_solver.cpp  miniapp_tridiag_solver.cpp  miniapp_trisolver.cpp  miniapp_tsgemm.cpp  tsgemm.cpp
miniapp/cmake/: DLAF_AddMiniapp.cmake
miniapp/kernel/: CMakeLists.txt  miniapp_larft.cpp  miniapp_larft_gemv.cpp  miniapp_laset.cpp
scripts/: README.md  apex_gemmchol.py  apex_tsgemm.py  build.sh  compare_commits.sh  gen.py  gen_chol.py  gen_chol_strong.py  gen_chol_weak.py  gen_dlaf_stress-gpu.py  gen_dlaf_strong-gpu.py  gen_dlaf_strong-mc.py  gen_dlaf_strong.py  gen_dlaf_weak-gpu.py  gen_dlaf_weak-mc.py  gen_dlaf_weak.py  gen_gemmchol.py  gen_hegst_strong.py  gen_hegst_weak.py  gen_strong.py  gen_strong_comparison.py  gen_trsm.py  gen_trsm_lln_strong.py  gen_trsm_lln_weak.py  gen_trsm_llt_strong.py  gen_tsgemm.py  gen_weak.py  gen_weak_comparison.py  gpu2ranks_ompi  gpu2ranks_slurm  gpu2ranks_slurm_cuda  gpu2ranks_slurm_hip  miniapps.py  plot_all_results.sh  plot_band2trid_strong.py  plot_band2trid_weak.py  plot_bt_band2trid_strong.py  plot_bt_band2trid_weak.py  plot_bt_red2band_strong.py  plot_bt_red2band_weak.py  (+25 more)
scripts/examples/: gen_dlaf_random-gpu.py
src/: CMakeLists.txt  DLAFConfig.cmake  DLAFConfigVersion.cmake  dummy.c  dummy.cpp  init.cpp  matrix.cpp  matrix_base.cpp  matrix_mirror.cpp  tile.cpp  tune.cpp
src/auxiliary/: mc.cpp
src/auxiliary/norm/: mc.cpp
src/blas/: scal.cpp
src/c_api/: blacs.h  grid.cpp  grid.h  init.cpp  utils.cpp  utils.h
src/c_api/eigensolver/: eigensolver.cpp  eigensolver.h  gen_eigensolver.cpp  gen_eigensolver.h
src/c_api/factorization/: cholesky.cpp  cholesky.h
src/c_api/inverse/: cholesky.cpp  cholesky.h
src/c_api/multiplication/: triangular.cpp  triangular.h
src/common/: index2d.cpp  single_threaded_blas.cpp  single_threaded_omp.cpp
src/communication/: communicator.cpp  communicator_grid.cpp  communicator_impl.cpp  communicator_impl.h  datatypes.cpp  executor.cpp
src/communication/kernels/: all_reduce.cpp  broadcast.cpp  p2p.cpp  reduce.cpp
src/cublas/: laset.cu
src/cuda/: mutex.cpp
src/cusolver/: assert_info.cu  stedc.cu
src/eigensolver/: mc.cpp
src/eigensolver/backtransformation/: mc.cpp
src/eigensolver/band_to_tridiag/: mc.cpp
src/eigensolver/bt_band_to_tri/: mc.cpp
src/eigensolver/bt_band_to_tridiag/: gpu.cpp  mc.cpp
src/eigensolver/bt_reduction_to_band/: gpu.cpp  mc.cpp
src/eigensolver/eigensolver/: gpu.cpp  mc.cpp
src/eigensolver/gen_eigensolver/: gpu.cpp  mc.cpp
src/eigensolver/gen_to_std/: gpu.cpp  mc.cpp
src/eigensolver/reduction_to_band/: gpu.cpp  mc.cpp
src/eigensolver/reduction_to_trid/: gpu.cpp  mc.cpp
src/eigensolver/tridiag_solver/: gpu.cpp  kernels.cpp  kernels.cu  mc.cpp  misc_gpu_kernels.cu
src/eti/: dataflow.cpp  function.cpp
src/factorization/: mc.cpp
src/factorization/cholesky/: cholesky_mc.cpp  gpu.cpp  mc.cpp
src/factorization/qr/: gpu.cpp  mc.cpp  tfactor_kernels.cu
src/interface/: blacs.cpp  cholesky.cpp  eigensolver.cpp  utils.cpp
src/inverse/cholesky/: gpu.cpp  mc.cpp
src/inverse/triangular/: gpu.cpp  mc.cpp
src/lapack/: laed4.cpp
src/lapack/gpu/: add.cu  lacpy.cu  larft.cu  laset.cu
src/matrix/: distribution.cpp  hdf5.cpp  layout_info.cpp  matrix_ref.cpp  matrix_view.cpp  retiled_matrix.cpp  tile.cpp
src/memory/: memory_chunk.cpp  memory_view.cpp
src/multiplication/general/: gpu.cpp  mc.cpp
src/multiplication/hermitian/: gpu.cpp  mc.cpp
src/multiplication/triangular/: gpu.cpp  mc.cpp
src/permutations/general/: gpu.cpp  invert.cu  invert_and_copy.cpp  invert_and_copy.cu  mc.cpp  perms.cu
src/solver/: gpu.cpp  mc.cpp
src/solver/backtransformation/: mc.cpp
src/solver/triangular/: gpu.cpp  mc.cpp
src/utility/: mc.cpp
test/: CMakeLists.txt
test/data/: README.md  issue-974.h5
test/examples/: CMakeLists.txt  example_hpx_channel.cpp
test/header/: CMakeLists.txt
test/include/: config.h.in  test_config.h.in
test/src/: CMakeLists.txt  CMakelists.txt  gtest_hpx_main.cpp  gtest_mpi_listener.cpp  gtest_mpi_listener.h  gtest_mpi_main.cpp  gtest_mpihpx_main.cpp  gtest_mpipika_main.cpp  gtest_pika_main.cpp  util_mpi.cpp
test/unit/: CMakeLists.txt  simulate_algorithm.cpp  test_blas_tile.cpp  test_blas_tile_extensions.cpp  test_cublas_tile.cpp  test_cusolver_tile.cpp  test_lapack_tile.cpp  test_lapack_tile_extensions.cpp  test_matrix.cpp  test_matrix_base.cpp  test_matrix_output.cpp  test_profiler.cpp  test_tile.cpp  test_types.cpp  test_util_cuda.cu  test_util_math.cpp  test_util_string.cpp  test_util_tile.cpp
(+3660 files in other folders)
