[project]
name = "dlaf-benchmarks"
version = "0.1.0"
description = "Utilities for running DLA-Future benchmarks."
requires-python = ">= 3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "pandas>=2.2.3",
    "parse>=1.20.2",
]

[dependency-groups]
notebook = [
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "tqdm>=4.67.1",
]

[tool.black]
line-length = 105

[tool.ruff]
line-length = 105
